hello-deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: hello
    name: hello
spec:
    replicas: 2
    selector:
        matchLabels:
            app: hello
    template:
        metadata:
            labels:
                app: hello
        spec:
            containers:
            - image: hello
              imagePullPolicy: IfNotPresent
              name: hello
              ports:
                - containerPort: 3000
