hello-deploy/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello
spec:
  selector:
      app: hello
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
